[metadata]
name = fuplot
version = 0.0.1
author = Bruno Reis
description = Framework for creating animatable data visualizations from tabular data for DaVinci Resolve Fusion.
url = https://github.com/brunocbreis/FuPlot
keywords = davinci resolve, fusion, data science

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires=
    pysion>=0.1.2
    pyperclip==1.8.2
    pandas==1.5.3

